--- a/DM-PersonalPortfolio/content/pages/about.html
+++ b/DM-PersonalPortfolio/content/pages/about.html
@@ -25,9 +25,6 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
                     <a href="experience.html">Experience</a>
                 </li>
                 <li>
@@ -102,7 +99,109 @@
     </container>
 </section>
 
-
+<section class="dm-portfolio-showcase grid-background-animation">
+    <container>
+        <ul>
+            <li>
+                <div class="video-container paused" data-volume-level="high">
+                        <img class="thumbnail-img">
+                        <div class="video-controls-container">
+                          <div class="timeline-container">
+                            <div class="timeline">
+                                <div class="thumb-indicator"></div>
+                            </div>
+                          </div>
+                          <div class="controls">
+                            <button class="play-pause-btn">
+                              <svg class="play-icon" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M8,5.14V19.14L19,12.14L8,5.14Z" />
+                              </svg>
+                              <svg class="pause-icon" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M14,19H18V5H14M6,19H10V5H6V19Z" />
+                              </svg>
+                            </button>
+                            <div class="volume-container">
+                              <button class="mute-btn">
+                                <svg class="volume-high-icon" viewBox="0 0 24 24">
+                                  <path fill="currentColor" d="M14,3.23V5.29C16.89,6.15 19,8.83 19,12C19,15.17 16.89,17.84 14,18.7V20.77C18,19.86 21,16.28 21,12C21,7.72 18,4.14 14,3.23M16.5,12C16.5,10.23 15.5,8.71 14,7.97V16C15.5,15.29 16.5,13.76 16.5,12M3,9V15H7L12,20V4L7,9H3Z" />
+                                </svg>
+                                <svg class="volume-low-icon" viewBox="0 0 24 24">
+                                  <path fill="currentColor" d="M5,9V15H9L14,20V4L9,9M18.5,12C18.5,10.23 17.5,8.71 16,7.97V16C17.5,15.29 18.5,13.76 18.5,12Z" />
+                                </svg>
+                                <svg class="volume-muted-icon" viewBox="0 0 24 24">
+                                  <path fill="currentColor" d="M12,4L9.91,6.09L12,8.18M4.27,3L3,4.27L7.73,9H3V15H7L12,20V13.27L16.25,17.53C15.58,18.04 14.83,18.46 14,18.7V20.77C15.38,20.45 16.63,19.82 17.68,18.96L19.73,21L21,19.73L12,10.73M19,12C19,12.94 18.8,13.82 18.46,14.64L19.97,16.15C20.62,14.91 21,13.5 21,12C21,7.72 18,4.14 14,3.23V5.29C16.89,6.15 19,8.83 19,12M16.5,12C16.5,10.23 15.5,8.71 14,7.97V10.18L16.45,12.63C16.5,12.43 16.5,12.21 16.5,12Z" />
+                                </svg>
+                              </button>
+                              <input class="volume-slider" type="range" min="0" max="1" step="any" value="1">
+                            </div>
+                            <div class="duration-container">
+                              <div class="current-time">0:00</div>
+                              /
+                              <div class="total-time"></div>
+                            </div>
+                            <button class="speed-btn wide-btn">
+                              1x
+                            </button>
+                            <button class="full-screen-btn">
+                              <svg class="open" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                              </svg>
+                              <svg class="close" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z"/>
+                              </svg>
+                            </button>
+                          </div>
+                        </div>
+                        <video src="../../content/vid/personal-portfolio/personal-portfolio.mp4">
+                        </video>
+                      </div>
+            </li>
+            <li>
+                <h2 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="0.7s" data-delay="0s">
+                    Portfolio Showcase
+                </h2>
+                <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.1s">
+                    Experience a captivating journey through my professional work from 2019 to 2023 in this short video. From a captivating intro to web development, photo editing, and video editing, witness my diverse expertise in just under two minutes.
+                </p>
+                <a class="dm-watch-on-youtube" href="https://www.youtube.com/watch?v=ilz2avyGG_U" target="_blank">
+                    <svg data-svg-type="fill" width="44" height="32" viewBox="0 0 44 32">
+                                               <path d="M41.8984 5.5C41.5 3.30078 39.6016 1.69922 37.3984 1.19922C34.1016 0.5 28 0 21.3984 0C14.8008 0 8.60156 0.5 5.30078 1.19922C3.10156 1.69922 1.19922 3.19922 0.800781 5.5C0.398438 8 0 11.5 0 16C0 20.5 0.398438 24 0.898438 26.5C1.30078 28.6992 3.19922 30.3008 5.39844 30.8008C8.89844 31.5 14.8984 32 21.5 32C28.1016 32 34.1016 31.5 37.6016 30.8008C39.8008 30.3008 41.6992 28.8008 42.1016 26.5C42.5 24 43 20.3984 43.1016 16C42.8984 11.5 42.3984 8 41.8984 5.5ZM16 23V9L28.1992 16L16 23Z" fill="#FF3D00"/>
+                                             </svg>                    <span>Watch on YouTube</span>
+                </a>
+                <div>
+                    <p>Video Timeline:</p>
+                    <ul>
+                        <li>
+                            <svg data-svg-type="fill" viewBox="0 0 320 512">
+                                               <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                                             </svg>                            <span>00:00 - 00:04 - Intro</span>
+                        </li>
+                        <li>
+                            <svg data-svg-type="fill" viewBox="0 0 320 512">
+                                               <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                                             </svg>                            <span>00:04 - 00:55 - Web Development</span>
+                        </li>
+                        <li>
+                            <svg data-svg-type="fill" viewBox="0 0 320 512">
+                                               <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                                             </svg>                            <span>00:55 - 01:14 - Photo Editing</span>
+                        </li>
+                        <li>
+                            <svg data-svg-type="fill" viewBox="0 0 320 512">
+                                               <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                                             </svg>                            <span>01:14 - 01:52 - Video Editing</span>
+                        </li>
+                        <li>
+                            <svg data-svg-type="fill" viewBox="0 0 320 512">
+                                               <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                                             </svg>                            <span>01:52 - 01:56 - Otro</span>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </container>
+</section>
 </div>            <section class="dm-debug">
         <span>
             <a class="btn-render" href="#" data-href="../../content/render/render.php">Render</a>
@@ -121,6 +220,10 @@
                                     <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
 </li>
                                     <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
+</li>
+                                    <li>Rendered render_sections/section-experience-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-experience-categories.html
+</li>
+                                    <li>Rendered render_sections/section-portfolio-showcase.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-portfolio-showcase.html
 </li>
                                     <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
 </li>
