--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-web-development-description.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-web-development-description.html
@@ -25,9 +25,6 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
                     <a href="experience.html">Experience</a>
                 </li>
                 <li>
@@ -136,6 +133,10 @@
                                     <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
 </li>
                                     <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
+</li>
+                                    <li>Rendered render_sections/section-experience-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-experience-categories.html
+</li>
+                                    <li>Rendered render_sections/section-portfolio-showcase.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-portfolio-showcase.html
 </li>
                                     <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
 </li>
