--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-about.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-about.html
@@ -88,19 +88,21 @@
         </div>
         <div>
             <h2 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s">About</h2>
-                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
-                My name is Denis Ionuț Mărginaș, I'm 25-year-old, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games. After completing my university studies in Mathematics and Informatics, I shifted my focus to web development and began pursuing a career in that field.            </p>
-            <br />
+                            <p data-motion="transition-fade-0 transition-slideInLeft-0">
+                    My name is Denis Ionuț Mărginaș, I'm 25-year-old, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games. After completing my university studies in Mathematics and Informatics, I shifted my focus to web development and began pursuing a career in that field.                </p>
+                <br />
 <b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
-                In 2019, I joined Pia Soft Product as a web developer and video-photo editor. During my time there, I worked on various tasks, including creating presentation websites and online shops using platforms like WordPress and Prestashop. I also handled SEO optimization, website and host maintenance, customer communication, and designing banners, logos, and video advertisements. Working independently on my tasks, I took the initiative to learn from scratch, except for my prior experience in video editing. Additionally, I developed web applications using PHP, TPL, SQL, JavaScript, jQuery, HTML, CSS, and more.            </p>
-            <br />
+                            <p data-motion="transition-fade-0 transition-slideInLeft-0">
+                    In 2019, I joined Pia Soft Product as a web developer and video-photo editor. During my time there, I worked on various tasks, including creating presentation websites and online shops using platforms like WordPress and Prestashop. I also handled SEO optimization, website and host maintenance, customer communication, and designing banners, logos, and video advertisements. Working independently on my tasks, I took the initiative to learn from scratch, except for my prior experience in video editing. Additionally, I developed web applications using PHP, TPL, SQL, JavaScript, jQuery, HTML, CSS, and more.                </p>
+                <br />
 <b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
-                Towards the end of 2021, I transitioned to working full time at Netex Romania, where I was hired as a front-end developer. My responsibilities involved maintaining multiple WordPress websites and working on web design projects. The web design aspect was particularly challenging as I received templates and page sections in formats, similar to Figma projects, and had to recreate them as static web pages using HTML, SASS, Node.js, Bootstrap, JavaScript, and jQuery. Initially, I worked independently on my part of the project, but later collaborated with a colleague who joined to assist with the same project. During this time, I gained valuable experience with the GitLab platform, learned Git commands, and improved my teamwork skills.            </p>
-            <br />
+                            <p data-motion="transition-fade-0 transition-slideInLeft-0">
+                    Towards the end of 2021, I transitioned to working full time at Netex Romania, where I was hired as a front-end developer. My responsibilities involved maintaining multiple WordPress websites and working on web design projects. The web design aspect was particularly challenging as I received templates and page sections in formats, similar to Figma projects, and had to recreate them as static web pages using HTML, SASS, Node.js, Bootstrap, JavaScript, and jQuery. Initially, I worked independently on my part of the project, but later collaborated with a colleague who joined to assist with the same project. During this time, I gained valuable experience with the GitLab platform, learned Git commands, and improved my teamwork skills.                </p>
+                <br />
 <b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                    </div>
+                        <br />
+<b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>33</b><br />
+        </div>
     </container>
 </section>
 
